--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2 class="section-one-h2">65% OFF</h2>
         <p class="section-one-p">OUR HOLIDAY DEALS ARE BETTER</p>
         <h2 class="section-two-catagories">ALL CATEGORIES</h2>
-        <img src="../images/New Year Photo.png" alt="New Year photo" class="new-year-photo">
+        <img src="images/New Year Photo.png" alt="New Year photo" class="new-year-photo">
        </section>
        <section class="main-section-two-midnight-party">
         <div class="section-two-text-image">
