--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <h2 class="section-two-catagories">ALL CATEGORIES</h2>
         <img src="images/New Year Photo.png" alt="New Year photo" class="new-year-photo">
        </section>
+       <!-- section two -->
        <section class="main-section-two-midnight-party">
         <div class="section-two-text-image">
             <h2 class="main-section-two-welcome">Welcome to midnight party</h2>
@@ -41,14 +42,48 @@
                 <img src="/images/Group 70.png" alt="2024" id="section-two-image2024">
             </div>      
        </section>
+
+       <!-- third section -->
+
        <section class="main-section-third">
+        <div class="third-div-1">
+            <p class="place-d-t">Place: <span class="time-span">New Park Hotel</span> </p> 
+            <p class="place-d-t">Date: <span class="time-span">31 December Night 2023</span> </p>
+            <p class="place-d-t">Time: <span class="time-span">Evening 7.30 pm to 12.30 am</span> </p>
+            <!-- button -->
+            <button id="btn" class="join-button">Join Now</button>
+        </div>
+       </section>
+       <section class="main-section-four">
+        <div class="best-offer">
+            <h3 class="best-offer-title">NEW BEST OFFER</h3>
+            <h1 class="Coming-soon">Coming Soon</h1>
+            <p class="coming-soon-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+        <div class="section-four-image">
+            <img id="image-section-four" src="images/Ellipse 1.png" alt="Image">
+        </div>
+        <div class="section-four-2024">
+            <h1 class="logo-24">2024</h1>
+            <p class="logo-right-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+            <img src="images/Group 96.png" alt="Happy New Year" id="group-96">
+        </div>
 
        </section>
+
+       <!-- holiday section -->
+                        
     </main>
-    <!-- footer section -->
+    <!-- footer section -->            
     <footer>
 
     </footer>
-    
+    <!-- <div class="footer-width">
+        <div class="footer">
+            <p class="footer-address">44, Big Building Roosevelt Street
+                Beach Gardens Florida 33410</p>
+        </div>
+    </div>
+     -->
 </body>
 </html>
