--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a href="#" id="section-two-Join">JOIN NOW</a>
             </div>
             <div class="main-two-nested">
-                <img src="/images/Group 70.png" alt="2024" id="section-two-image2024">
+                <img src="images/Group 70.png" alt="2024" id="section-two-image2024">
             </div>      
        </section>
 
