--- a/index.html
+++ b/index.html
@@ -75,19 +75,11 @@
             <p class="logo-right-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
             <img src="images/Group 96.png" alt="Happy New Year" id="group-96">
         </div>
-
-
-
-
-
-
-
-
        </section>
        <!-- section five -->
        <section class="section-five">
             <div class="holiday-sell">
-                <h3 class="functional">WHAT IS FUNCTIONAL</h3>
+                <h3 class="what">WHAT IS FUNCTIONAL</h3>
                 <h1 class="holiday-50">Holidays <span id="span-50">Sale 50%</span></h1>
 
 
