new description added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        <section class="main-section-two-midnight-party">
         <div class="section-two-text-image">
             <h2 class="main-section-two-welcome">Welcome to midnight party</h2>
-            <p class="main-section-two-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <p class="main-section-two-details">As the clock strikes midnight on New Year's Eve, jubilation fills the air. Sparkling confetti, clinking glasses, and joyous cheers usher in a promising chapter, bathed in the glow of celebrations. </p>
             <a href="#" id="section-two-Join">JOIN NOW</a>
             </div>
             <div class="main-two-nested">
@@ -65,14 +65,14 @@
         <div class="best-offer">
             <h3 class="best-offer-title">NEW BEST OFFER</h3>
             <h1 class="Coming-soon">Coming Soon</h1>
-            <p class="coming-soon-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <p class="coming-soon-details">Ring in the New Year with our unbeatable offer! Enjoy exclusive discounts, complimentary gifts, and a festive atmosphere. Embrace a year of savings and indulgence with our best New Year deal. </p>
         </div>
         <div class="section-four-image">
             <img id="image-section-four" src="images/Ellipse 1.png" alt="Image">
         </div>
         <div class="section-four-2024">
             <h1 class="logo-24">2024</h1>
-            <p class="logo-right-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed.</p>
+            <p class="logo-right-details">A year of potential, innovation, growth, challenges, and collective resilience in global endeavors and progress.</p>
             <img src="images/Group 96.png" alt="Happy New Year" id="group-96">
         </div>
        </section>
@@ -82,9 +82,7 @@
                 <h3 class="what">WHAT IS FUNCTIONAL</h3>
                 <h1 class="holiday-50">Holidays <span id="span-50">Sale 50%</span></h1>
                 
-                <p class="holiday-para">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
-                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
-                    fermentum amet amet sit consectetur.</p>
+                <p class="holiday-para">Celebrate the joy of the New Year with our holiday sale! Enjoy a spectacular 50% off on a wide range of products. Embrace savings and start the year in style!</p>
             </div>
             <div class="holiday-image">
                 <img id="group-75" src="images/Group 75.png" alt="" class="holiday-image00">
@@ -102,7 +100,7 @@
         <div class="best-section">
             <p class="best-gift-title">THE BEST GIFTS</p>
             <h1 class="Awesome-portfolio-title">Our Awesome Portfolio</h1>
-            <p class="portfollio details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed <br> molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <p class="portfollio details">Unwrap success with the best gift: a diversified portfolio. Invest wisely, and watch your financial aspirations flourish with strategic choices and growth. </p>
         </div>
         <div class="images-rec">
             <img src="images/Rectangle 3.png" alt="">
@@ -123,7 +121,7 @@
         <div class="subscribe-section">
             <img src="images/Group 61.png" alt="Email iamge" class="email-iamge">
             <h1 class="subscribe-news">Subscribe Newsletter</h1>
-            <p class="subscribe-details">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+            <p class="subscribe-details">Subscribe to our newsletter for exclusive updates, promotions, and valuable insights. Join our community and stay informed on the latest trends, offers, and exciting developments. Don't miss out! </p>
             <div class="div-input">
                 <input id="input" type="text" placeholder="user@gmail.com">
                 <button id="button" >Subscribe</button>
