--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <img src="images/Rectangle 4.png" alt="">
             <img src="images/Rectangle 5.png" alt="">
         </div>
-        <div class="images-rec">
+        <div class="images-rec-2">
             <img src="images/Rectangle 6.png" alt="">
             <img src="images/Rectangle 7.png" alt="">
             <img src="images/Rectangle 8.png" alt="">
